UI: fix theme item delete icon overlap with apply icon issue

--- a/src/client/components/setting-panel/list.styl
+++ b/src/client/components/setting-panel/list.styl
@@ -36,6 +36,9 @@
     .list-item-remove
     .list-item-bookmark
       display block
+.theme-item:hover
+    .list-item-remove
+      right 24px
 // .item-list
 //   .list-item-edit
 //   .list-item-apply
